# RPP-CustNav-RPP-based-Customized-Navigation-Framework

./: .gitignore  README.md
src/car/car_driver/: CMakeLists.txt  package.xml  readme.md
src/car/car_driver/include/: car_canalyst.h  wheel_motor_driver.h
src/car/car_driver/msg/: RealCMD.msg
src/car/car_driver/src/: car_canalyst.cpp
src/car/car_move/: CMakeLists.txt  package.xml
src/car/car_move/include/: car_control.h
src/car/car_move/launch/: go.launch  go_mapping.launch
src/car/car_move/src/: car_control.cpp
src/rpp_pkg/: CMakeLists.txt  package.xml
src/rpp_pkg/config/: amcl_diff.launch  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  rpp_local_planner_params.yaml
src/rpp_pkg/include/rpp_pkg/: bspline_curve.h  controller.h  curve.h  log.h  point.h  point_global_planner.h  rpp_math.h
src/rpp_pkg/launch/: PointsCloud2toLaserscan.launch  dwa_nav.launch  hdl_localization.launch  model_localization.launch  path_2_points.launch  rpp_nav.launch  run_in_real.launch  run_in_sim.launch
src/rpp_pkg/map/: map.yaml  scans_gimp.pgm  scans_gimp2.pgm
src/rpp_pkg/path_points/: 0.2.xml  downsampled_path.xml  path_1.xml
src/rpp_pkg/plugins/: point_controller_plugin.xml  rpp_controller_plugin.xml
src/rpp_pkg/rviz/: hdl_localization.rviz  map_tool.rviz
src/rpp_pkg/src/: bspline_curve.cpp  controller.cpp  curve.cpp  douglas.cpp  nav_goal_publish.cpp  path_optimizer.cpp  path_visualization.cpp  point_global_planner.cpp  rpp_controller.cpp  rpp_math.cpp  test.py
src/slam/: CMakeLists.txt  package.xml
src/slam/launch/: 3dmap_hdl_localization.launch  PointsCloud2toLaserscan.launch  hdl_localization.launch  localization_mid360.launch  mapping_mid360.launch  model_localization.launch  usb_cam-test.launch
src/slam/map/: scans.yaml
src/slam/rviz/: hdl_localization.rviz  path2point.rviz
