<?xml version="1.0"?>
<package format="2">
  <name>car_driver</name>
  <version>0.0.0</version>
  <description>The car_driver package</description>
  <maintainer email="u@todo.todo">u</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo</depend>
  <depend>joint_state_publisher</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>robot_state_publisher</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>rviz</depend>
  <export>
    <architecture_independent />
  </export>
  </package>